# video-series

./: .gitignore  README.md
artifacts/: application.json  approval.teal  contract.json
beaker/application/: application.json  approval.teal  contract.py
beaker/application_client/: main.py
beaker/boxes/: main.py
beaker/decorator/: external.py
beaker/precompile/: approval.teal
beaker/sandbox/: main.py
beaker/state/: account_dynamic_state.py  account_reserved_state.py  account_state.py  accountblob.py  app_reserved_state.py  app_state.py  appblob.py
javascript/: package-lock.json  package.json
javascript/accounts/: createAccount.js  restoreAccount.js
javascript/assets/: assetExample.js
javascript/src/: sandbox.js
pyteal/create_ASA/: main.py
pyteal/data_types/: basic.py
pyteal/router/: router.py
pyteal/state_manipulation/: states.py
pyteal/transaction_fields/: transactions.py
python/accounts/: README.md  create_account.py  multisig.py  rekey.py  restore_account.py  sandbox.py
python/assets/: asset_example.py  sandbox.py
resources/: README.md
smart-contracts/master-beaker/what-is-beaker/: .copier-answers.yml  README.md  pyproject.toml
smart-contracts/master-beaker/what-is-beaker/beaker-calc/: bkr_contract.py  bkr_deploy.py  deploy.py
smart-contracts/master-beaker/what-is-beaker/beaker-calc/artifacts/: application.json  approval.teal  contract.json
smart-contracts/master-beaker/what-is-beaker/pyteal-calc/: pt_contract.py  pt_deploy.py
smart-contracts/master-beaker/what-is-beaker/pyteal-calc/artifacts/: approval.teal  contract.json
(+236 files in other folders)
